--- a/index.html
+++ b/index.html
@@ -31,11 +31,39 @@
     <h1> FACPYA LTI</h1>
     <h1>LICENCIADO EN TECNOLOGIAS DE LA INFORMACION</h1>
     <address>Las maravillas de la vida #222</address>
-    <nav>AQUI VAN LOS LINKS</nav>
-
+    <nav> https://es.wikipedia.org/wiki/Python</nav>
+    <ol>
+        <li>Python</li>
+        <li>C</li>
+        <li>C#</li>
+        <li>Java</li>
+    </ol>
+    <ul>
+        <li>Lenguaje 1</li>
+        <li>Lenguaje 2</li>
+        <li>Lenguaje 4</li>
+        <li>Lenguaje 5</li>
+    </ul>
+    <pre>
+                        ____
+                   .---'-    \
+      .-----------/           \
+     /           (         ^  |   __
+&   (             \        O  /  / .'
+'._/(              '-'  (.   (_.' /
+     \                    \     ./
+      |    |       |    |/ '._.'
+       )   @).____\|  @ |
+   .  /    /       (    | mrf
+  \|, '_:::\  . ..  '_:::\ ..\).
+    </pre>
+    <blockquote
+     cite="https://es.wikipedia.org/wiki/Python">
+    Python es un lenguaje de alto nivel de programación interpretado cuya filosofía hace hincapié en la legibilidad de su código, se utiliza para desarrollar aplicaciones de todo tipo, ejemplos: Instagram, Netflix, Spotify, Panda 3D, entre otros.
+    </blockquote>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, quisquam officiis? Veniam ab voluptatem dicta, sequi sed necessitatibus optio blanditiis! Recusandae alias expedita ipsa velit voluptatum repellat voluptates magnam eveniet?</p>
     </header>
-    <aside>aside listo</aside>
+    <aside>Hecho por: Francisco R</aside>
     <footer>
      <hr>   
     </footer>
@@ -49,7 +77,7 @@
     
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, quisquam officiis? Veniam ab voluptatem dicta, sequi sed necessitatibus optio blanditiis! Recusandae alias expedita ipsa velit voluptatum repellat voluptates magnam eveniet?</p>
         </header>
-        <aside>aside listo</aside>
+        <aside>Hecho por: Francisco R</aside>
         <footer>
          <hr>   
         </footer>
